--- a/src/main/resources/templates/views/biz/ins/BIZINS003M0.html
+++ b/src/main/resources/templates/views/biz/ins/BIZINS003M0.html
@@ -87,11 +87,11 @@
 		</div>
 	</div>
 	<script>
-        function checkData(data){
-            return parentCheckData(data, check_cols);
-        }
-        
-        function getStdYymm(){
+		function checkData(data){
+			return parentCheckData(data, check_cols);
+		}
+		
+		function getStdYymm(){
 			var inputYear = $("#inputYear").val();
 			var inputMonth = $("#inputMonth").val();
 			var inputStdYymm = inputYear + ((inputMonth.length != 0) ? inputMonth.padStart(2, "0"): "");
@@ -100,22 +100,22 @@
 			}
 			return inputStdYymm
 		}
-        
-        function getList(input) {
-            console.log("getList input : " + input);
-            var option = {
-                           id          : "SelectList"
-                         , type        : "post"
-                         , url         : "/BIZINS003M0SelectList"
-                         , async       : false
-                         , dataType    : "json"
-                         , contentType : "application/json; charset=utf-8"
-                         , data        : input
-                         };
-            
-            gf_Transaction(option, fn_callback);
-        }
-        
+		
+		function getList(input) {
+			console.log("getList input : " + input);
+			var option = {
+						   id		  : "SelectList"
+						 , type		: "post"
+						 , url		 : "/BIZINS003M0SelectList"
+						 , async	   : false
+						 , dataType	: "json"
+						 , contentType : "application/json; charset=utf-8"
+						 , data		: input
+						 };
+			
+			gf_Transaction(option, fn_callback);
+		}
+		
 		// settle 함수에 보낼 데이터를 가져오는 함수
 		function getSummarize(){
 			var inputStdYymm = getStdYymm();
@@ -127,53 +127,53 @@
 			}
 		}
 
-        function summarize(input) {
-            
-            //console.log("summarize input : " + input);
-            var option = {
-                           id          : "ExecuteList"
-                         , type        : "post"
-                         , url         : "/BIZINS003M0ExecuteList"
-                         , async       : false
-                         , dataType    : "text"
-                         , contentType : "application/json; charset=utf-8"
-                         , data        : input
-                         };
-            
-            gf_Transaction(option, fn_callback);
-        }
-        
-    </script>
+		function summarize(input) {
+			
+			//console.log("summarize input : " + input);
+			var option = {
+						   id		   : "ExecuteList"
+						 , type		   : "post"
+						 , url		   : "/BIZINS003M0ExecuteList"
+						 , async	   : false
+						 , dataType	   : "text"
+						 , contentType : "application/json; charset=utf-8"
+						 , data		   : input
+			};
+			
+			gf_Transaction(option, fn_callback);
+		}
+		
+	</script>
 	<script src="js/utils.js"></script>
 	<script>
-        $(document).ready(function() {
-        	
-            console.log("Document is ready.");
-            
-            $("#inputYear").val(gv_year);
+		$(document).ready(function() {
+			
+			console.log("Document is ready.");
+			
+			$("#inputYear").val(gv_year);
 			$("#inputMonth").val(gv_month);
-            
-            //화면 접속시 바로 조회
-            main();
-            
-            //send버튼 누르면, 조건적용하여 검색
-            $("#send").click(main);
-            
-            //엔터키누르면, 조건적용하여 검색
-            $("input").on("keyup", function(key) {
-                if (key.keyCode == 13) {
-                    main();
-                }
-            });
-            
-        });
-        
-        var grid;
-        var dataView;
-        var data;
-        var unqId = "rowNumber";
-        var xcpt_cols = [unqId, "regUsrid", "regDt"];
-        var check_cols = [unqId, ];
+			
+			//화면 접속시 바로 조회
+			main();
+			
+			//send버튼 누르면, 조건적용하여 검색
+			$("#send").click(main);
+			
+			//엔터키누르면, 조건적용하여 검색
+			$("input").on("keyup", function(key) {
+				if (key.keyCode == 13) {
+					main();
+				}
+			});
+			
+		});
+		
+		var grid;
+		var dataView;
+		var data;
+		var unqId = "rowNumber";
+		var xcpt_cols = [unqId, "regUsrid", "regDt"];
+		var check_cols = [unqId, ];
 		var columns = [
 			{id: "ptfCd",				name: "Portfolio",							field: "ptfCd",					width: 400,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, 								headerCssClass: "slick-header-columns", cssClass: "slick-column-left"},
 			{id: "basAmt",				name: "Basis",								field: "basAmt",				width: 150,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, formatter: currencyFormatter, 	headerCssClass: "slick-header-columns", cssClass: "slick-column-right" },
@@ -191,57 +191,57 @@
 			{id: "entmAmt",				name: "End",								field: "entmAmt",				width: 150, sortable: true, editor: Slick.Editors.Text, validator: createValidator, formatter: currencyFormatter, 	headerCssClass: "slick-header-columns", cssClass: "slick-column-right" },
 			{id: "frstRegEmpNo",		name: "Registrant",							field: "frstRegEmpNo",			width: 100, sortable: true, editor: Slick.Editors.Text, validator: createValidator, 								headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
 			{id: "frstRegDtm",			name: "Registration Date",					field: "frstRegDtm",			width: 120, sortable: true, editor: Slick.Editors.Text, validator: createValidator, 								headerCssClass: "slick-header-columns", cssClass: "slick-column-center"}
-	];
-        
-        var options = {
-            enableCellNavigation: true,
-            enableColumnReorder: false,
-            forceFitColumns: false,
-            multiColumnSort: true,
-            numberedMultiColumnSort: true,
-            tristateMultiColumnSort: true,
-            sortColNumberInSeparateSpan: true,
-            enableAutoSizeColumns: true,
-            editable: false,   // grid도 편집가능.. grid 편집 기능 제거 필요..
-            enableAddRow: true,
-            asyncEditorLoading: false,
-            autoEdit: false,
-            autoEditNewRow: false,
-            rowHeight: 35,
-        };
-        
-        var newRowIds = 0;
-    
-        var pluginOptions = {
-            clipboardCommandHandler: function(editCommand){ undoRedoBuffer.queueAndExecuteCommand.call(undoRedoBuffer,editCommand); },
-            readOnlyMode : false,
-            includeHeaderWhenCopying : false,
-            newRowCreator: function(count) {
-                for (var i = 0; i < count; i++) {
-                    var item = {
-                        id: "newRow_" + newRowIds++
-                    }
-                grid.getData().addItem(item);
-                }
-            }
-        };
-        
-        function main() {
-            // 그리드 초기화 및 데이터 로드
-            console.log("Initializing SlickGrid...");
-            var inputStdYymm = getStdYymm();
-            getList(
-                        (input = JSON.stringify({ 
-                                                  stdYymm: inputStdYymm
-                        }))
-                   );
-        }
+		];
+		
+		var options = {
+			enableCellNavigation: true,
+			enableColumnReorder: false,
+			forceFitColumns: false,
+			multiColumnSort: true,
+			numberedMultiColumnSort: true,
+			tristateMultiColumnSort: true,
+			sortColNumberInSeparateSpan: true,
+			enableAutoSizeColumns: true,
+			editable: false,   // grid도 편집가능.. grid 편집 기능 제거 필요..
+			enableAddRow: true,
+			asyncEditorLoading: false,
+			autoEdit: false,
+			autoEditNewRow: false,
+			rowHeight: 35,
+		};
+		
+		var newRowIds = 0;
+	
+		var pluginOptions = {
+			clipboardCommandHandler: function(editCommand){ undoRedoBuffer.queueAndExecuteCommand.call(undoRedoBuffer,editCommand); },
+			readOnlyMode : false,
+			includeHeaderWhenCopying : false,
+			newRowCreator: function(count) {
+				for (var i = 0; i < count; i++) {
+					var item = {
+						id: "newRow_" + newRowIds++
+					}
+				grid.getData().addItem(item);
+				}
+			}
+		};
+		
+		function main() {
+			// 그리드 초기화 및 데이터 로드
+			console.log("Initializing SlickGrid...");
+			var inputStdYymm = getStdYymm();
+			getList(
+						(input = JSON.stringify({ 
+												  stdYymm: inputStdYymm
+						}))
+					);
+		}
 
-        function getSearch() {
-            // 그리드 초기화 및 데이터 로드
-            console.log("Initializing SlickGrid...");
-            var inputStdYymm = getStdYymm();
-            
+		function getSearch() {
+			// 그리드 초기화 및 데이터 로드
+			console.log("Initializing SlickGrid...");
+			var inputStdYymm = getStdYymm();
+			
 			if ( $("#inputMonth").val() === "" && $("#inputYear").val() === "") {
 				alert("Please select a year, month!");
 				return;
@@ -256,149 +256,143 @@
 			const element = document.getElementById("divMyGrid");
 			element.innerHTML = "";
 			
-            getList(
-                        (input = JSON.stringify({ 
-                                                  stdYymm: inputStdYymm
-                        }))
-                   );
-        }    
+			getList(
+						(input = JSON.stringify({ 
+												  stdYymm: inputStdYymm
+						}))
+					);
+		}	
 
 		/**
 		 * Transaction callback 함수
 		 **/
 		function fn_callback(result){
-		   console.log("fn_callback : " + result.id);
-			 if( result.resultCd == "S" ){
+			console.log("fn_callback : " + result.id);
+			if( result.resultCd == "S" ){
 					
-				 switch (result.id){
-					 case "SelectList" :
-						 
-						 fn_setGrid(result.data);
-						 
-					 break;
-					 case "ExecuteList" :
-						 console.log("executeList case");
-						 alert("Successfully Calculated!");
-						 main();
-					 break;
-				 }	  
-			 } else if( result.resultCd == "E") {
-				 
+				switch (result.id){
+					case "SelectList" :
+
+						fn_setGrid(result.data);
+
+						break;
+					case "ExecuteList" :
+						console.log("executeList case");
+						alert("Successfully Calculated!");
+						main();
+						break;
+				}
+			} else if( result.resultCd == "E") {
 			} else {
-				 console.log("fn_callback result : ", result);
-			  }
-		 }
+				console.log("fn_callback result : ", result);
+			}
+		}
 		
-           function fn_setGrid(data){
-                
-                dataView = new Slick.Data.DataView( { idField: unqId });
-                grid     = new Slick.Grid("#divMyGrid", dataView, columns, options);
-                
-                // Make the grid respond to DataView change events.
-                dataView.onRowCountChanged.subscribe(function (e, args) {
-                    grid.updateRowCount();
-                    grid.render();
-                });
-                
-                dataView.onRowsChanged.subscribe(function (e, args) {
-                    grid.invalidate();
-                    grid.render();
-            });
-                    
-            // setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
-            dataView.setItems(data, unqId);
-            
-            // when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
-            grid.onBeforeSort.subscribe(function (e, args) {
-                return true;
-            });                   
-          
-    
-           // 정렬
-           grid.onSort.subscribe(function (e, args) {
-             var cols = args.sortCols;
-    
-             data.sort(function (dataRow1, dataRow2) {
-               for (var i = 0, l = cols.length; i < l; i++) {
-                    var field  = cols[i].sortCol.field;
-                    var sign   = cols[i].sortAsc ? 1 : -1;
-                    var value1 = dataRow1[field],
-                        value2 = dataRow2[field];
-                    var result =
-                   (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
-                 if (result != 0) {
-                   return result;
-                 }
-               }
-              return 0;
-             });
-    
-            grid.render();
-          });
-    
-          grid.setSelectionModel(new Slick.CellSelectionModel());
-          grid.registerPlugin(new Slick.AutoTooltips());
-    
-          // set keyboard focus on the grid
-          //grid.getCanvasNode().focus();
-          grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
-    
-          grid.onAddNewRow.subscribe(function (e, args) {
-              var newItem = args.item;
-              var column = args.column;
-              dataView.beginUpdate();
-              dataView.setItems(data);
-              dataView.endUpdate();
-              grid.updateRowCount();
-              grid.render();
-          });
-    
-          grid.onBeforeEditCell.subscribe(function (e, args) {
-            console.log("onBeforeEditCell");
-          });
-    
-            grid.onCellChange.subscribe(function (e, args) {
-                dataView.beginUpdate();
-                dataView.setItems(data);
-                dataView.endUpdate();
-                grid.updateRowCount();
-                grid.render();
-            });
-    
-          grid.onValidationError.subscribe(function (e, args) {
-            // handle validation errors originating from the CompositeEditor
-            if (args.validationResults) {
-              let errorMsg = args.validationResults.msg || "";
-              if (args.editor && args.editor instanceof Slick.CompositeEditor) {
-                if (args.validationResults.errors) {
-                  errorMsg += "\n";
-                  args.validationResults.errors.forEach(function (
-                    error,
-                    errorIndex
-                  ) {
-                    const columnName = error.editor.args.column.id;
-                    errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
-                  });
-                }
-                console.log(errorMsg);
-              }
-            } else {
-              alert(errorMessages);
-            }
-          });
-    
-          grid.setActiveCell(0, 0);
-          console.log("SlickGrid initialized.");
-          }     
-        // Download Excel functionality
-        document.getElementById('downloadExcel').addEventListener('click', function() {
-            const currDate = getCurrentDateTime();
-            const fileName = 'BIZINS003_FM_' + currDate; // 원하는 파일 이름으로 변경 가능
-            const sheetName = '보험손익(CSM)'; // 시트 이름
-            const gridColumns = columns; // SlickGrid의 컬럼 배열
-            const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
-            exportToExcel(fileName, sheetName, gridColumns, gridData);
-        });
-    </script>
+		function fn_setGrid(data){
+				
+			dataView = new Slick.Data.DataView( { idField: unqId });
+			grid	 = new Slick.Grid("#divMyGrid", dataView, columns, options);
+				
+			// Make the grid respond to DataView change events.
+			dataView.onRowCountChanged.subscribe(function (e, args) {
+				grid.updateRowCount();
+				grid.render();
+			});
+				
+			dataView.onRowsChanged.subscribe(function (e, args) {
+				grid.invalidate();
+				grid.render();
+			});
+					
+			// setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
+			dataView.setItems(data, unqId);
+				
+			// when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
+			grid.onBeforeSort.subscribe(function (e, args) {
+			return true;
+			});				   
+		  
+	
+			// 정렬
+			grid.onSort.subscribe(function (e, args) {
+				var cols = args.sortCols;
+		
+				data.sort(function (dataRow1, dataRow2) {
+					for (var i = 0, l = cols.length; i < l; i++) {
+						var field  = cols[i].sortCol.field;
+						var sign   = cols[i].sortAsc ? 1 : -1;
+						var value1 = dataRow1[field], value2 = dataRow2[field];
+						var result = (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
+						if (result != 0) {
+						return result;
+						}
+					}
+				return 0;
+				});
+		
+				grid.render();
+			});
+	
+			grid.setSelectionModel(new Slick.CellSelectionModel());
+			grid.registerPlugin(new Slick.AutoTooltips());
+		
+			// set keyboard focus on the grid
+			//grid.getCanvasNode().focus();
+			grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
+	
+			grid.onAddNewRow.subscribe(function (e, args) {
+				var newItem = args.item;
+				var column = args.column;
+				dataView.beginUpdate();
+				dataView.setItems(data);
+				dataView.endUpdate();
+				grid.updateRowCount();
+				grid.render();
+			});
+	
+			grid.onBeforeEditCell.subscribe(function (e, args) {
+				console.log("onBeforeEditCell");
+			});
+	
+			grid.onCellChange.subscribe(function (e, args) {
+				dataView.beginUpdate();
+				dataView.setItems(data);
+				dataView.endUpdate();
+				grid.updateRowCount();
+				grid.render();
+			});
+	
+			grid.onValidationError.subscribe(function (e, args) {
+				// handle validation errors originating from the CompositeEditor
+				if (args.validationResults) {
+					let errorMsg = args.validationResults.msg || "";
+					if (args.editor && args.editor instanceof Slick.CompositeEditor) {
+						if (args.validationResults.errors) {
+							errorMsg += "\n";
+							args.validationResults.errors.forEach(function (error, errorIndex) {
+								const columnName = error.editor.args.column.id;
+								errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
+							});
+						}
+						console.log(errorMsg);
+					}
+				} else {
+					alert(errorMessages);
+				}
+			});
+	
+			grid.setActiveCell(0, 0);
+			console.log("SlickGrid initialized.");
+		}
+		// Download Excel functionality
+		document.getElementById('downloadExcel').addEventListener('click', function() {
+			const currDate = getCurrentDateTime();
+			const fileName = 'BIZINS003_FM_' + currDate; // 원하는 파일 이름으로 변경 가능
+			const sheetName = '보험손익(CSM)'; // 시트 이름
+			const gridColumns = columns; // SlickGrid의 컬럼 배열
+			const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
+			exportToExcel(fileName, sheetName, gridColumns, gridData);
+		});
+	</script>
 </th:block>
 </html>
