--- a/src/main/resources/templates/views/adm/usr/ADMUSR002M0.html
+++ b/src/main/resources/templates/views/adm/usr/ADMUSR002M0.html
@@ -166,7 +166,7 @@
 			var data;
 			var unqId = "seqNo";
 			var xcpt_cols = ["seqNo","oldUsrId","usrEmail","oldStatDvCd"];
-			var check_cols = ["usrId"];
+			var check_cols = ["usrDvCd", "usrId", "usrPhNo", "statDvCd", "useStrDtm"];
 			
 			var usrDvCdList  = { 2:"Administrator"
 					           , 3:"User" };
@@ -182,6 +182,7 @@
 						, { id: "usrNm",			name: "User name",	 			field: "usrNm",				sortable: true, width: 200, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left" }
 						, { id: "usrEmail",			name: "User email",				field: "usrEmail",			sortable: true, width: 200, editor: Slick.Editors.Text, validator: createValidator, hidden:true, headerCssClass: "slick-header-columns", cssClass: "slick-column-left" }
 						, { id: "usrPhNo",			name: "User phone number",		field: "usrPhNo",			sortable: true, width: 160, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "usrDeptNm",		name: "User team name",			field: "usrDeptNm",			sortable: true, width: 160, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
 						, { id: "statDvCd",	 		name: "Status",					field: "statDvCd",	 		sortable: true, width: 100, editor: gf_Select2Editor  , formatter: gf_Select2Formatter, dataSource: statDvCdList, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
 						, { id: "oldStatDvCd",		name: "Status",					field: "oldStatDvCd",		sortable: true, width: 100, editor: Slick.Editors.Text, validator: createValidator, hidden:true, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
 						, { id: "useStrDtm",		name: "Use start date",			field: "useStrDtm",			sortable: true, width: 150, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
