--- a/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
+++ b/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
@@ -291,20 +291,20 @@
 			  }
 		 }
 
-		   function fn_setGrid(data){
+		function fn_setGrid(data){
 				
-				dataView = new Slick.Data.DataView( { idField: unqId });
-				grid	 = new Slick.Grid("#divMyGrid", dataView, columns, options);
+			dataView = new Slick.Data.DataView( { idField: unqId });
+			grid	 = new Slick.Grid("#divMyGrid", dataView, columns, options);
 				
-				// Make the grid respond to DataView change events.
-				dataView.onRowCountChanged.subscribe(function (e, args) {
-					grid.updateRowCount();
-					grid.render();
-				});
+			// Make the grid respond to DataView change events.
+			dataView.onRowCountChanged.subscribe(function (e, args) {
+				grid.updateRowCount();
+				grid.render();
+			});
 				
-				dataView.onRowsChanged.subscribe(function (e, args) {
-					grid.invalidate();
-					grid.render();
+			dataView.onRowsChanged.subscribe(function (e, args) {
+				grid.invalidate();
+				grid.render();
 			});
 					
 			// setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
@@ -315,48 +315,46 @@
 				return true;
 			});
 	
-		   // 정렬
-		   grid.onSort.subscribe(function (e, args) {
-			 var cols = args.sortCols;
+			// 정렬
+			grid.onSort.subscribe(function (e, args) {
+				var cols = args.sortCols;
 	
-			 data.sort(function (dataRow1, dataRow2) {
-			   for (var i = 0, l = cols.length; i < l; i++) {
-					var field  = cols[i].sortCol.field;
-					var sign   = cols[i].sortAsc ? 1 : -1;
-					var value1 = dataRow1[field],
-						value2 = dataRow2[field];
-					var result =
-				   (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
-				 if (result != 0) {
-				   return result;
-				 }
-			   }
-			  return 0;
-			 });
+				data.sort(function (dataRow1, dataRow2) {
+					for (var i = 0, l = cols.length; i < l; i++) {
+						var field  = cols[i].sortCol.field;
+						var sign   = cols[i].sortAsc ? 1 : -1;
+						var value1 = dataRow1[field], value2 = dataRow2[field];
+						var result = (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
+						if (result != 0) {
+						return result;
+						}
+					}
+				return 0;
+				});
 	
-			grid.render();
-		  });
+				grid.render();
+			});
 	
-		  grid.setSelectionModel(new Slick.CellSelectionModel());
-		  grid.registerPlugin(new Slick.AutoTooltips());
+			grid.setSelectionModel(new Slick.CellSelectionModel());
+			grid.registerPlugin(new Slick.AutoTooltips());
 	
-		  // set keyboard focus on the grid
-		  //grid.getCanvasNode().focus();
-		  grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
+			// set keyboard focus on the grid
+			//grid.getCanvasNode().focus();
+			grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
 	
-		  grid.onAddNewRow.subscribe(function (e, args) {
-			  var newItem = args.item;
-			  var column = args.column;
-			  dataView.beginUpdate();
-			  dataView.setItems(data);
-			  dataView.endUpdate();
-			  grid.updateRowCount();
-			  grid.render();
-		  });
+			grid.onAddNewRow.subscribe(function (e, args) {
+				var newItem = args.item;
+				var column = args.column;
+				dataView.beginUpdate();
+				dataView.setItems(data);
+				dataView.endUpdate();
+				grid.updateRowCount();
+				grid.render();
+			});
 	
-		  grid.onBeforeEditCell.subscribe(function (e, args) {
-			console.log("onBeforeEditCell");
-		  });
+			grid.onBeforeEditCell.subscribe(function (e, args) {
+				console.log("onBeforeEditCell");
+			});
 	
 			grid.onCellChange.subscribe(function (e, args) {
 				dataView.beginUpdate();
@@ -366,41 +364,38 @@
 				grid.render();
 			});
 	
-		  grid.onValidationError.subscribe(function (e, args) {
-			// handle validation errors originating from the CompositeEditor
-			if (args.validationResults) {
-			  let errorMsg = args.validationResults.msg || "";
-			  if (args.editor && args.editor instanceof Slick.CompositeEditor) {
-				if (args.validationResults.errors) {
-				  errorMsg += "\n";
-				  args.validationResults.errors.forEach(function (
-					error,
-					errorIndex
-				  ) {
-					const columnName = error.editor.args.column.id;
-					errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
-				  });
+			grid.onValidationError.subscribe(function (e, args) {
+				// handle validation errors originating from the CompositeEditor
+				if (args.validationResults) {
+					let errorMsg = args.validationResults.msg || "";
+					if (args.editor && args.editor instanceof Slick.CompositeEditor) {
+						if (args.validationResults.errors) {
+							errorMsg += "\n";
+							args.validationResults.errors.forEach(function (error, errorIndex) {
+								const columnName = error.editor.args.column.id;
+								errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
+							});
+						}
+						console.log(errorMsg);
+					}
+				} else {
+					alert(errorMessages);
 				}
-				console.log(errorMsg);
-			  }
-			} else {
-			  alert(errorMessages);
-			}
-		  });
+			});
 	
-		  grid.setActiveCell(0, 0);
-		  console.log("SlickGrid initialized.");
-		  }	
+			grid.setActiveCell(0, 0);
+			console.log("SlickGrid initialized.");
+		}	
 
-        // Download Excel functionality
-        document.getElementById('downloadExcel').addEventListener('click', function() {
-            const currDate = getCurrentDateTime();
-            const fileName = 'BIZADT001_FM_' + currDate; // 원하는 파일 이름으로 변경 가능
-            const sheetName = '계정대사'; // 시트 이름
-            const gridColumns = columns; // SlickGrid의 컬럼 배열
-            const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
-            exportToExcel(fileName, sheetName, gridColumns, gridData);
-        });
+		// Download Excel functionality
+		document.getElementById('downloadExcel').addEventListener('click', function() {
+			const currDate = getCurrentDateTime();
+			const fileName = 'BIZADT001_FM_' + currDate; // 원하는 파일 이름으로 변경 가능
+			const sheetName = '계정대사'; // 시트 이름
+			const gridColumns = columns; // SlickGrid의 컬럼 배열
+			const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
+			exportToExcel(fileName, sheetName, gridColumns, gridData);
+		});
     </script>
 </th:block>
 </html>
